added pagination, sorting and HATEOAS parts